<resources>
    <string name="app_name">NMedia</string>
    <string name="post_author_avatar">Post author avatar</string>
    <string name="post_menu">Post menu</string>
    <string name="likes">Likes</string>
    <string name="reposts">Reposts</string>
    <string name="views">Views</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_mode">Edit mode</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="edit_post">Edit Post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="play_button">Play button</string>
    <string name="no_app">No app</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\\\'s post</string>
    <string name="notification_new_post">%1$s posted a new post:\\n %2$s</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="error_loading">Something went wrong. Try again later.</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="recent_posts">Recent posts</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="preview">Preview</string>
    <string name="play_image">Image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter">Enter</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="all_fields_must_be_filled_in">All fields must be filled in!</string>
    <string name="ad_description">Ad</string>
</resources>