<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="?actionBarSize">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="@dimen/mini_padding"
                tools:text="@tools:sample/lorem[100]" />

            <FrameLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:contentDescription="@string/preview"
                    android:focusable="true"
                    android:padding="@dimen/mini_padding"
                    tools:src="@tools:sample/avatars" />

                <Button
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/menu_remove" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="?colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/takePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_add_a_photo_24"
            app:tint="?colorSurface" />

        <ImageView
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_add_photo_alternate_24"
            app:tint="?colorSurface" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>